image covers mobile fixed

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1378,4 +1378,11 @@ margin-left: 10%;
         font-size: 0.65em;
             
     }
+
+
+/* -----------------------COMMON CSS---------------------- */
+.cover-img{
+    margin-right: 0%;
+}
+
 }
